# harnessFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HarnessFlowGoal.md  LICENSE  QUICKSTART.md  README.md  assessment-2026-04-17.md  delivery-checklist.md  flow-catalog.md  harness-flow.prd.md  harnessFlow-skill.md  harnessFlow.md  harnessFlow_prompt_v2.docx  method3.md  phase8-validation-report.md  pyproject.toml  pytest.ini  routing-matrix.md  setup.sh  stage-contracts.md  state-machine.md  task-board-template.md
.claude/agents/: harnessFlow-failure-archive-writer.md  harnessFlow-retro-generator.md  harnessFlow-supervisor.md  harnessFlow-verifier.md
.claude/commands/: harnessFlow-ui.md  harnessFlow.md
.claude/skills/: harnessFlow.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/l1_02/: __init__.py
app/l1_03/: __init__.py
app/main_loop/: __init__.py
app/multimodal/: ic_12_delegator.py  process_content.py  router.py
app/quality_loop/: __init__.py
app/skill_dispatch/: README.md
app/supervisor/: __init__.py
archive/: __init__.py  __main__.py  auditor.py  path_resolver.py  retro_renderer.py  routing_consultation.py  writer.py
archive/failure-archive/: p-harness-backfill-node-id-20260427T052300Z.jsonl
archive/retros/: p-harness-backfill-node-id-20260427T052300Z-retro.md
archive/sequence_verifier/: __init__.py  loader.py  verifier.py
archive/stage_contracts/: __init__.py  __main__.py  parser.py  predicate_eval.py  validator.py
archive/supervisor_wake/: __init__.py  cli.py  wake.py
archive/tests/: test_auditor.py  test_cli.py  test_path_resolver.py  test_retro_renderer.py  test_routing_consultation.py  test_schema.py  test_sequence_verifier.py  test_stage_contracts.py  test_stop_auto_retro_close.py  test_supervisor_wake.py  test_task_board_schema.py  test_ui_artifacts_robustness.py  test_writer.py
backend/bff/: config.py  deps.py  main.py
commands/: harnessFlow-ui.md  harnessFlow.md
docs/: 3-solution-resume-status.md  CODE-OWNERSHIP-MATRIX.md  MASTER-SESSION-DISPATCH.md  prd
docs/1-goal/: HarnessFlowGoal.md
docs/2-prd/: businessFlow.md  flowOutInput.md  prdPlan.md  scope.md
docs/3-3-Monitoring-Controlling/: acceptance-criteria.md  hard-redlines.md  soft-drift-patterns.md
docs/4-exe-plan/: 4-0-master-execution-plan.md  PROGRESS.md  main-4-final-integration-exe-plan.md
docs/5-exe-test-plan/: 5-1-integration-test-run.md  5-2-acceptance-test-run.md  5-3-performance-test-run.md  5-4-failure-injection.md  5-5-regression-test.md
docs/6-finalQualityAcceptance/: 6-1-delivery-checklist.md  6-2-release-process.md  6-3-signoff-templates.md  6-4-release-notes-and-docs.md
examples/hello/: __init__.py  say_hello.py
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/tests/: setup.ts
hooks/: PostToolUse-goal-drift-check.sh  PostToolUse-supervisor-wake.sh  README.md  Stop-final-gate.sh
pipelines/: 13_node_contract.yaml  card_emptiness.py  contract_loader.py  gate_eval.py
plans/: flow-catalog-routing-matrix.plan.md  harnessFlow-architecture.plan.md  method3-refactor.plan.md  phase4-state-machine-templates.plan.md  phase5-main-skill-prompt.plan.md  phase6-supervisor-verifier.plan.md  phase7-failure-archive-auto-retro.plan.md  phase8-e2e-validation.plan.md
projects/: _correction_log.jsonl
research/: v2-supervisor-orchestrator-findings.md
schemas/: failure-archive.schema.json  retro-template.md  stage-contract.schema.json  task-board.schema.json
scripts/: backfill_node_id_in_stage_artifacts.py  backfill_pipeline_graph.py  fallback_fixer.py  mermaid2plantuml.py  quality_gate.sh  register.sh  run-p20-validation.sh  self-test.sh  verify-p20-artifacts.py
sessions/: v1.2-partial-checkpoint-20260418T190000Z.md
subagents/: failure-archive-writer.md  retro-generator.md  supervisor.md  verifier.md
task-boards/cross-project/: README.md
templates/: README.md
templates/closing/: delivery_manifest.md  lessons_learned.md  retro_summary.md
templates/fourset/: acceptance_criteria.md  goals.md  plan.md  prd.md  quality_standards.md  requirements.md  scope.md  tdd.md
templates/kickoff/: goal.md  scope.md
templates/pmp/: communication.md  cost.md  integration.md  procurement.md  quality.md  resource.md  risk.md  schedule.md  scope.md
templates/togaf/: adr.md  phase_a.md  phase_b.md  phase_c_application.md  phase_c_data.md  phase_d.md  phase_e.md  phase_f.md  phase_g.md  phase_h.md  preliminary.md
tests/: conftest.py  e2e_harnessflow_walkthrough.md  test_say_hello.py
tests/acceptance/: __init__.py
tests/bff/: conftest.py  test_admin.py  test_trim_profile.py
tests/e2e/: README.md  conftest.py  slice_a_dashboard.py
tests/integration/: __init__.py
tests/l1_02/: conftest.py  test_l2_07_ic_contracts.py  test_l2_07_perf.py  test_l2_07_template_engine_negative.py  test_l2_07_template_engine_positive.py  test_l2_07_template_engine_startup.py
tests/l1_03/: conftest.py  test_l2_01_wbs_decomposer.py  test_l2_02_topology.py  test_l2_03_scheduler.py  test_l2_04_progress.py  test_l2_05_rollback.py
tests/l1_05/: conftest.py  test_l2_01_registry.py
tests/l1_06/: conftest.py  test_l2_01_edge_cases.py  test_l2_01_integration_points.py  test_l2_01_tier_manager_e2e.py  test_l2_01_tier_manager_ic_contract.py  test_l2_01_tier_manager_negative.py  test_l2_01_tier_manager_perf.py  test_l2_01_tier_manager_positive.py
tests/l1_09/: conftest.py  test_e2_empty_project.py  test_l2_01_context_halt.py  test_l2_01_event_bus.py  test_l2_01_subscriber_reader.py  test_l2_02_deadlock_janitor.py  test_l2_02_lock_acquire.py  test_l2_03_audit_query.py  test_l2_04_checkpoint.py  test_l2_04_shutdown.py  test_l2_05_append_atomic.py  test_l2_05_atomic_write.py  test_l2_05_hash_chain.py  (+2 more)
ui/: start.sh
verifier_primitives/: README.md  __init__.py  _shell.py  docs.py  errors.py  executor.py  fs.py  git_tools.py  http.py  oss.py  perf.py  review.py  schema.py  screenshot.py  test_tools.py  video.py
(+1079 files in other folders)
