[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessflow"
version = "0.0.1"
description = "HarnessFlow v1.0 — L1-09 韧性+审计 脊柱"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jcs>=0.2.1",
    "ulid-py>=1.1",
    "jsonschema>=4.21",
    "jinja2>=3.1",
    "zstandard>=0.22",
    "PyYAML>=6",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*", "archive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "perf: performance benchmarks",
    "integration: integration tests across L2s",
    "e2e: end-to-end scenarios across multiple IC",
    "pm14: PM-14 physical sharding tests",
    "fsync: fsync hard-constraint tests",
    "hash_chain: hash chain integrity tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app/l1_09", "app/project_lifecycle"]
branch = true
omit = ["*/__init__.py", "*/schemas.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["archive", "docs", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RET", "ARG"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (pydantic Field)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
packages = ["app.l1_09", "app.project_lifecycle"]
